FIX (Address comments, refactor, ...) TryCatchUtils and unit test it